--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 33
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.hui.tally"
+        applicationId "cs.hku.ledger"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
